...
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/previous_button"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
...
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
...
